--- a/public_html/profiles/os2sub/themes/subsite_2/bower.json
+++ b/public_html/profiles/os2sub/themes/subsite_2/bower.json
@@ -1,16 +1,14 @@
 {
-  "name": "filmkongen.dk",
+  "name": "OS2subsite",
   "description": "Website",
   "version": "0.0.1",
   "dependencies": {
     "bootstrap": "~3.*",
     "bs3-designer": "~0.*",
-    "bs3-sidebar": "~0.*",
     "fastclick": "~1.*",
     "fontawesome": "~4.*",
     "html5shiv": "~3.*",
-    "respond": "~1.*",
-    "select2-bootstrap-css": "~1.*"
+    "respond": "~1.*"
   },
   "ignore": [
     "bower_components"
