scripts for syddjurs and ignores

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
+logs/
+tmp/
+sessions/
+private/
+public_html/sites/sites.php
+scripts/.admin_password.txt
+scripts/config.sh
 public_html/sites/*.dd
