--- a/public_html/profiles/os2sub/themes/subsite_1/src/grunt/config.json
+++ b/public_html/profiles/os2sub/themes/subsite_1/src/grunt/config.json
@@ -20,8 +20,8 @@
   "concat": {
     "jsApp": [
       "src/vendor/bootstrap/dist/js/bootstrap.js",
-      "src/vendor/bs3-designer/js/bs3-designer.js",
-      "src/vendor/bs3-sidebar/js/bs3-sidebar.js",
+      "src/js/bs3-designer.js",
+      "src/js/bs3-sidebar.js",
       "src/vendor/jquery-placeholder/jquery.placeholder.js",
       "src/vendor/jquery.cookie/jquery.cookie.js",
       "src/vendor/fastclick/lib/fastclick.js",
