--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,57 @@
-logs/
-tmp/
-sessions/
-private/
+# Ignore docs files
+_gh_pages
+_site
+.ruby-version
+
+# Numerous always-ignore extensions
+*.diff
+*.err
+*.log
+*.orig
+*.rej
+*.swo
+*.swp
+*.vi
+*.zip
+*~
+
+# OS or Editor folders
+._*
+.cache
+.DS_Store
+.idea
+.project
+.settings
+.tmproj
+*.esproj
+*.sublime-project
+*.sublime-workspace
+nbproject
+Thumbs.db
+
+# Komodo
+.komodotools
+*.komodoproject
+
+# grunt-html-validation
+validation-report.json
+validation-status.json
+
+# Folders to ignore
+bower_components
+node_modules
+logs
+sessions
+tmp
+share
+others
+private
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Drupal specific
 public_html/sites/sites.php
 scripts/.admin_password.txt
 scripts/config.sh
